# sofia

./: .gitignore  LICENSE  pyproject.toml
core/: audio.py  notes.py
model/: kodaly_model.h5
scripts/: data_collection.py  sofia.py  train_model.py
